samples/_failures_safe/1761219888_b2fadb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f6e80350.c: In function ‘main’:
./samples/SAFE/__tmp_f6e80350.c:157:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  157 |     for (int i
      |     ^~~
./samples/SAFE/__tmp_f6e80350.c:157:5: error: expected declaration or statement at end of input
